<resources>
    <string name="app_name">MyCloset</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="nav_gallery">From Gallery</string>
    <string name="nav_camera">From Camera</string>
    <string name="nav_cancel">Cancel</string>
    <string name="nav_save">Save</string>
    <string name="clothe_name">Description</string>
    <string name="to_tops">Tops</string>
    <string name="to_bottoms">Bottoms</string>
    <string name="to_shoes">Shoes</string>
    <string name="to_accessories">Accessories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EmailTome">Email</string>
    <string name="EmailTop">Email</string>
    <string name="EmailBack">Back</string>
    <string name="EmailTopp">Email</string>
    <string name="EmailTop4">Email</string>
    <string name="EmailTop5">Email</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="EmailBottoms1">Email</string>
    <string name="EmailShoes">email</string>
    <string name="EmailShoes1">email</string>
    <string name="EmailAcess">email</string>
    <string name="EmailAccess2">email</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="todooo">TODO</string>
    <string name="todo01">TODO</string>
    <string name="manage_users">Manage Users</string>
    <string name="add_user">+ Add User</string>
    <string name="style">Style Me</string>
    <string name="name">Name</string>
</resources>