<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteY="1dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAD6D6"
        tools:context=".Shoes">

        <Button
            android:id="@+id/buttonShoeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="323dp"
            android:background="#DAD6D6"
            android:text="@string/EmailBack"
            android:textColor="#795548"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="93dp"
            android:contentDescription="@string/EmailShoes"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shoes1"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="42dp"
            android:contentDescription="@string/EmailShoes1"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:srcCompat="@drawable/shoes2"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="272dp"
            android:contentDescription="@string/EmailShoes1"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:srcCompat="@drawable/shoes3"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="500dp"
            android:contentDescription="@string/EmailShoes1"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:srcCompat="@drawable/shoes4"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="716dp"
            android:contentDescription="@string/EmailShoes1"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            app:srcCompat="@drawable/shoes5"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>